# timage-public

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  README.md  docker-compose.local.yaml  docker-compose.ngrok.yaml  docker-compose.traefik.yaml  docker-compose.yaml  pyproject.toml  up-ngrok.sh  up.sh
backend/: asgi.py  celery.py  celeryconfig.py  settings.py  urls.py  wsgi.py
bot/: application.py  catcher.py  constants.py  handlers.py  pagination.py  serializers.py  tasks.py  tests.py  views.py
bot/management/commands/: generate_local_images.py  run_bot.py  run_catcher.py
bot/migrations/: 0001_initial.py  0002_initial.py
bot/models/: __init__.py  image.py  message.py  reaction.py  sender.py
bot/utils/: recommendation.py
common/: middleware.py  tests.py
common/models/: uuid.py
common/utils/: async_atomic.py  celery_scheduler.py  db.py  misc.py  serializers.py
dockerfiles/: django.Dockerfile
fixtures/: local_user.json
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.svelte  api.ts  app.css  constants.ts  stores.ts  types.ts
frontend/src/lib/layout/: Layout.svelte
frontend/src/lib/swipes/: Card.svelte  Loading.svelte  SwipeNotification.svelte  Swipes.svelte  utils.ts
playground/: _setup.py  base.py
run/: celery.sh  gunicorn.sh  local.sh  ngrok.sh
templates/: index.html
users/: auth.py  tests.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
users/models/: user.py
